📦 Build package maven update